@@ -1,0 +1,18 @@
+{
+  "control": [
+    {
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2021-07-10T11:16:14.957032",
+      "license": "See CK LICENSE.txt for licensing details",
+      "version": [
+        "2",
+        "5",
+        "6"
+      ]
+    }
+  ]
+}
