@@ -40,7 +40,7 @@ def init(i):
 #
 # HELP IS APPRECIATED!
 
-def filter(i):
+def xfilter(i):
     """
     Input:  {
               points          - dict with points, each has dict with optimization dimensions (should have the same names)
@@ -148,3 +148,82 @@ def filter(i):
        ck.out('Number of points after filtering: '+str(lp))
 
     return {'return':0, 'points':points, 'deleted_points':dpoints}
+
+##############################################################################
+# Leave points on 2D frontier
+# TBD: need to redesign to support any number of dimensions
+
+def filter_2d(i):
+    """
+    Input:  {
+              points (list) : [{"dim1":value11, "dim2":value12, ...},
+                               {"dim1":value21, "dim2":value22, ...}]
+              frontier_keys (list) : ["dim1", "dim2"] - which keys to use for the frontier 
+              (reverse_keys) (list) : ["dim2"] - which keys to reverse (smaller is better)
+
+              (plot) (str) : if "yes", plot graph with a frontier using matplotlib
+            }
+
+    Output: {
+              return       - return code =  0, if successful
+                                         >  0, if error
+              (error)      - error text if return > 0
+
+              frontier [list] - list of points on a 2D frontier
+            }
+
+    """
+
+    plot=i.get('plot','')=='yes'
+    
+    points=i['points']
+
+    frontier_keys=i['frontier_keys']
+    assert len(frontier_keys)==2, 'must be 2 frontier keys'
+
+    reverse_keys=i.get('reverse_keys',[])
+
+    kx=frontier_keys[0]
+    ky=frontier_keys[1]
+
+    revx=True if kx in reverse_keys else False
+    revy=True if ky in reverse_keys else False
+
+
+    if len(points)<3:
+       frontier=points
+    else: 
+       # Sort by 0 dim
+       spoints=sorted(points, key=lambda x: x.get(kx,0), reverse=revx)
+
+       frontier=[spoints[0]]
+
+       for p in spoints[1:]:
+           if revy:
+              if p.get(ky,0)>=frontier[-1].get(ky,0):
+                  frontier.append(p)
+           elif p.get(ky,0)<=frontier[-1].get(ky,0):
+              frontier.append(p)
+
+    if plot:
+       import matplotlib.pyplot as plt   
+
+       x1=[]
+       y1=[]
+       for v in points:
+           x1.append(v.get(kx,0))
+           y1.append(v.get(ky,0))
+
+       plt.scatter(x1,y1)
+
+       x2=[]
+       y2=[]
+       for v in frontier:
+           x2.append(v.get(kx,0))
+           y2.append(v.get(ky,0))
+
+       plt.plot(x2,y2)
+
+       plt.show()
+
+    return {'return':0, 'frontier':frontier}
